# chess_server

./: .pre-commit-config.yaml  README.md  pyproject.toml  run_tests.sh  setup_venv.sh
.github/workflows/: lint.yaml  unittest.yaml
chess_server/: elo_ranker.py  main.py  outcome.py  player.py  server.py
templates/: error_page.html  game_result.html  players_stats.html
tests/: test_elo_ranker.py  test_player.py
